# qt6-output-power-management

./: CMakeLists.txt  README.md
debian/: control
src/: output-power-management.cpp  output-power-management_p.h  qt6-output-power-management.h  qt6-output-power-management.pc.in
